style: black and isort

--- a/notebooks/all-to-all.ipynb
+++ b/notebooks/all-to-all.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "N = 100\n",
-    "#H = xgi.complete_hypergraph(N, max_order=2)\n",
+    "# H = xgi.complete_hypergraph(N, max_order=2)\n",
     "\n",
     "H = xgi.ring_lattice(N, 2, 4, 0)"
    ]
@@ -202,7 +202,7 @@
     "    pos=pos,\n",
     "    node_fc=psi_init % (2 * np.pi),\n",
     "    node_fc_cmap=\"twilight\",\n",
-    "    node_size=np.random.random(N)*10,\n",
+    "    node_size=np.random.random(N) * 10,\n",
     "    rescale_sizes=False,\n",
     "    **{\"max_node_size\": 10}\n",
     ")\n",
@@ -274,10 +274,10 @@
     "# simulate\n",
     "kwargs = {\n",
     "    \"adj1\": adj1,\n",
-    "#    \"links\": links,\n",
-    "#    \"triangles\": triangles,\n",
-    "#    \"k1_avg\": k1_avg,\n",
-    "#    \"k2_avg\": k2_avg,\n",
+    "    #    \"links\": links,\n",
+    "    #    \"triangles\": triangles,\n",
+    "    #    \"k1_avg\": k1_avg,\n",
+    "    #    \"k2_avg\": k2_avg,\n",
     "}\n",
     "\n",
     "thetas_arr = np.zeros((n_reps, N, len(times)))\n",
@@ -293,7 +293,7 @@
     "        theta_0=psi_init,\n",
     "        t_end=t_end,\n",
     "        dt=dt,\n",
-    "        rhs=rhs_pairwise, # rhs_pairwise_all\n",
+    "        rhs=rhs_pairwise,  # rhs_pairwise_all\n",
     "        **kwargs\n",
     "    )\n",
     "\n",
@@ -355,7 +355,11 @@
     "# only to viz twisted states\n",
     "fig, ax = plt.subplots(figsize=(2, 2))\n",
     "ax, im = xgi.draw(\n",
-    "    H, pos=pos, node_fc=thetas_arr[i,:,-1] % (2 * np.pi), node_fc_cmap=\"twilight\", node_size=1\n",
+    "    H,\n",
+    "    pos=pos,\n",
+    "    node_fc=thetas_arr[i, :, -1] % (2 * np.pi),\n",
+    "    node_fc_cmap=\"twilight\",\n",
+    "    node_size=1,\n",
     ")\n",
     "plt.colorbar(im, label=\"phase value\")"
    ]
@@ -647,8 +651,7 @@
     "\n",
     "thetas_arr = np.zeros((n_reps, len(k2s), N, len(times)))\n",
     "\n",
-    "for j, k2 in enumerate (k2s):\n",
-    "    \n",
+    "for j, k2 in enumerate(k2s):\n",
     "    for i in tqdm(range(n_reps)):\n",
     "        psi_init = generate_state(N, kind=\"random\", noise=noise)\n",
     "\n",
@@ -660,7 +663,7 @@
     "            theta_0=psi_init,\n",
     "            t_end=t_end,\n",
     "            dt=dt,\n",
-    "            rhs=rhs_pairwise_triplet_all_asym, # rhs_pairwise_all  #rhs_triplet_all_asym\n",
+    "            rhs=rhs_pairwise_triplet_all_asym,  # rhs_pairwise_all  #rhs_triplet_all_asym\n",
     "            # **kwargs\n",
     "        )\n",
     "\n",
@@ -684,11 +687,11 @@
    "source": [
     "results = {}\n",
     "\n",
-    "for j, k2 in enumerate(tqdm(k2s)): \n",
-    "    states = [identify_state(thetas, atol=0.5) for thetas in thetas_arr[:,j]]\n",
+    "for j, k2 in enumerate(tqdm(k2s)):\n",
+    "    states = [identify_state(thetas, atol=0.5) for thetas in thetas_arr[:, j]]\n",
     "    states_unique, counts = np.unique(states, return_counts=True)\n",
     "    probs = counts / n_reps\n",
-    "    \n",
+    "\n",
     "    results[k2] = {}\n",
     "    for state, prob in zip(states_unique, probs):\n",
     "        results[k2][state] = prob"
@@ -937,7 +940,7 @@
     "    ax=ax,\n",
     "    alpha=0.7,\n",
     "    style=\"state\",\n",
-    "    hue_order=[\"sync\", \"2-cluster\", \"other\"]\n",
+    "    hue_order=[\"sync\", \"2-cluster\", \"other\"],\n",
     ")\n",
     "\n",
     "g.set(yscale=\"log\")\n",
@@ -987,7 +990,7 @@
     "\n",
     "plt.subplots_adjust(hspace=0.5, top=0.8)\n",
     "\n",
-    "#fig.suptitle(tag_params, fontsize=\"small\")"
+    "# fig.suptitle(tag_params, fontsize=\"small\")"
    ]
   },
   {
@@ -1047,11 +1050,11 @@
     "results = {}\n",
     "k2s = [0, 0.5, 1, 1.5, 2, 2.5]\n",
     "\n",
-    "for j, k2 in enumerate(tqdm(k2s)): \n",
-    "    states = [identify_state(thetas, atol=0.5) for thetas in dat[:,j]]\n",
+    "for j, k2 in enumerate(tqdm(k2s)):\n",
+    "    states = [identify_state(thetas, atol=0.5) for thetas in dat[:, j]]\n",
     "    states_unique, counts = np.unique(states, return_counts=True)\n",
     "    probs = counts / n_reps\n",
-    "    \n",
+    "\n",
     "    results[k2] = {}\n",
     "    for state, prob in zip(states_unique, probs):\n",
     "        results[k2][state] = prob"
