--- a/notebooks/rhs_speed_and_correctness_tests.ipynb
+++ b/notebooks/rhs_speed_and_correctness_tests.ipynb
@@ -62,46 +62,47 @@
     "    Raises:\n",
     "    ------\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    r_min = int(np.ceil((d - 1) / 2))\n",
     "    if r < r_min:\n",
     "        raise ValueError(f\"r must be >= ceil((d - 1) / 2) = {r_min} to have edges.\")\n",
-    "    \n",
+    "\n",
     "    H = xgi.Hypergraph()\n",
-    "    \n",
+    "\n",
     "    nodes = np.arange(N)\n",
-    "    \n",
+    "\n",
     "    edges = []\n",
-    "    neighbor_rel_ids = np.concatenate((np.arange(-r, 0), np.arange(1, r+1)))\n",
-    "    \n",
+    "    neighbor_rel_ids = np.concatenate((np.arange(-r, 0), np.arange(1, r + 1)))\n",
+    "\n",
     "    for i in nodes:\n",
-    "        neighbor_ids = (i + neighbor_rel_ids)\n",
-    "        edge_neighbors_i = combinations(neighbor_ids, d-1)\n",
-    "        if kind==\"strict\":\n",
+    "        neighbor_ids = i + neighbor_rel_ids\n",
+    "        edge_neighbors_i = combinations(neighbor_ids, d - 1)\n",
+    "        if kind == \"strict\":\n",
     "            edge_neighbors_i = [el for el in edge_neighbors_i if max(el) - min(el) <= r]\n",
     "        edges_i = [(i, *comb) for comb in edge_neighbors_i]\n",
     "        edges = edges + edges_i\n",
-    "        \n",
+    "\n",
     "    edges = np.mod(edges, N)\n",
-    "    \n",
+    "\n",
     "    H.add_nodes_from(nodes)\n",
     "    H.add_edges_from(edges)\n",
-    "    H.cleanup() # remove duplicate edges\n",
+    "    H.cleanup()  # remove duplicate edges\n",
     "    return H\n",
+    "\n",
     "\n",
     "from itertools import permutations\n",
     "\n",
-    "def adjacency_tensor(H, order):\n",
     "\n",
+    "def adjacency_tensor(H, order):\n",
     "    N = H.num_nodes\n",
     "    shape = tuple([N] * (order + 1))\n",
     "    tensor = np.zeros(shape)\n",
-    "    \n",
+    "\n",
     "    edges = H.edges.filterby(\"order\", order)\n",
     "    for id, members in edges.members(dtype=dict).items():\n",
     "        for idcs in permutations(members):\n",
     "            tensor[idcs] = 1\n",
-    "            \n",
+    "\n",
     "    return tensor"
    ]
   },
@@ -121,7 +122,7 @@
    ],
    "source": [
     "N = 100\n",
-    "#H = xgi.complete_hypergraph(N, max_order=2)\n",
+    "# H = xgi.complete_hypergraph(N, max_order=2)\n",
     "\n",
     "r1 = 1\n",
     "r2 = 1\n",
@@ -167,10 +168,9 @@
    "outputs": [],
    "source": [
     "def rhs_3_sym_micro(t, psi, omega, k1, k2, r1, r2, triangles):\n",
-    "    \n",
     "    N = len(psi)\n",
     "    triplet = np.zeros(N)\n",
-    "    \n",
+    "\n",
     "    for i, j, k in triangles:\n",
     "        # sin(2 oj - ok - oi)\n",
     "        oi = psi[i]\n",
@@ -179,7 +179,7 @@
     "        triplet[i] += 2 * sin(oj + ok - 2 * oi)\n",
     "        triplet[j] += 2 * sin(oi + ok - 2 * oj)\n",
     "        triplet[k] += 2 * sin(oj + oi - 2 * ok)\n",
-    "        \n",
+    "\n",
     "    return triplet"
    ]
   },
@@ -191,7 +191,6 @@
    "outputs": [],
    "source": [
     "def rhs_3_sym_sum(t, psi, omega, k1, k2, r1, r2, adjt2):\n",
-    "\n",
     "    N = len(psi)\n",
     "    sin_psi = np.sin(psi, dtype=np.longdouble)\n",
     "    cos_psi = np.cos(psi, dtype=np.longdouble)\n",
@@ -207,7 +206,7 @@
     "        + sum_sin_psi.dot(cos_psi) * cos_psi**2\n",
     "        + sum_sin_psi.dot(cos_psi) * sin_psi**2\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    return triplet"
    ]
   },
@@ -375,7 +374,7 @@
     }
    ],
    "source": [
-    "plt.plot(xx-yy)"
+    "plt.plot(xx - yy)"
    ]
   },
   {
