--- a/notebooks/ring.ipynb
+++ b/notebooks/ring.ipynb
@@ -70,31 +70,31 @@
     "    Raises:\n",
     "    ------\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    r_min = int(np.ceil((d - 1) / 2))\n",
     "    if r < r_min:\n",
     "        raise ValueError(f\"r must be >= ceil((d - 1) / 2) = {r_min} to have edges.\")\n",
-    "    \n",
+    "\n",
     "    H = xgi.Hypergraph()\n",
-    "    \n",
+    "\n",
     "    nodes = np.arange(N)\n",
-    "    \n",
+    "\n",
     "    edges = []\n",
-    "    neighbor_rel_ids = np.concatenate((np.arange(-r, 0), np.arange(1, r+1)))\n",
-    "    \n",
+    "    neighbor_rel_ids = np.concatenate((np.arange(-r, 0), np.arange(1, r + 1)))\n",
+    "\n",
     "    for i in nodes:\n",
-    "        neighbor_ids = (i + neighbor_rel_ids)\n",
-    "        edge_neighbors_i = combinations(neighbor_ids, d-1)\n",
-    "        if kind==\"strict\":\n",
+    "        neighbor_ids = i + neighbor_rel_ids\n",
+    "        edge_neighbors_i = combinations(neighbor_ids, d - 1)\n",
+    "        if kind == \"strict\":\n",
     "            edge_neighbors_i = [el for el in edge_neighbors_i if max(el) - min(el) <= r]\n",
     "        edges_i = [(i, *comb) for comb in edge_neighbors_i]\n",
     "        edges = edges + edges_i\n",
-    "        \n",
+    "\n",
     "    edges = np.mod(edges, N)\n",
-    "    \n",
+    "\n",
     "    H.add_nodes_from(nodes)\n",
     "    H.add_edges_from(edges)\n",
-    "    H.cleanup() # remove duplicate edges\n",
+    "    H.cleanup()  # remove duplicate edges\n",
     "    return H"
    ]
   },
@@ -122,7 +122,7 @@
    ],
    "source": [
     "N = 100\n",
-    "#H = xgi.complete_hypergraph(N, max_order=2)\n",
+    "# H = xgi.complete_hypergraph(N, max_order=2)\n",
     "\n",
     "r1 = 2\n",
     "r2 = 2\n",
@@ -318,6 +318,7 @@
     "\n",
     "    return out\n",
     "\n",
+    "\n",
     "def rhs_pairwise_triplet_all_sym(t, psi, omega, k1, k2):\n",
     "    out = (\n",
     "        rhs_pairwise_all(t, psi, omega, k1, k2)\n",
@@ -327,21 +328,22 @@
     "\n",
     "    return out\n",
     "\n",
+    "\n",
     "from numba import jit\n",
     "\n",
+    "\n",
     "def rhs_23_nn_sym_micro(t, psi, omega, k1, k2, r1, r2, links, triangles):\n",
-    "    \n",
     "    N = len(psi)\n",
     "    pairwise = np.zeros(N)\n",
     "    triplet = np.zeros(N)\n",
-    "    \n",
+    "\n",
     "    for i, j in links:\n",
     "        # sin(oj - oi)\n",
     "        oi = psi[i]\n",
     "        oj = psi[j]\n",
     "        pairwise[i] += sin(oj - oi)\n",
     "        pairwise[j] += sin(oi - oj)\n",
-    "        \n",
+    "\n",
     "    for i, j, k in triangles:\n",
     "        # sin(2 oj - ok - oi)\n",
     "        oi = psi[i]\n",
@@ -350,15 +352,14 @@
     "        triplet[i] += 2 * sin(oj + ok - 2 * oi)\n",
     "        triplet[j] += 2 * sin(oi + ok - 2 * oj)\n",
     "        triplet[k] += 2 * sin(oj + oi - 2 * ok)\n",
-    "        \n",
+    "\n",
     "    g1 = r1\n",
     "    g2 = r2 * (2 * r2 - 1)\n",
-    "    \n",
-    "    return omega + (k1 / r1) * pairwise + (k2 / g2)  * (triplet / 2)\n",
+    "\n",
+    "    return omega + (k1 / r1) * pairwise + (k2 / g2) * (triplet / 2)\n",
     "\n",
     "\n",
     "def rhs_23_nn_sym(t, psi, omega, k1, k2, r1, r2, adj1, adj2):\n",
-    "\n",
     "    N = len(psi)\n",
     "    sin_psi = np.sin(psi)\n",
     "    cos_psi = np.cos(psi)\n",
@@ -377,11 +378,11 @@
     "        - sum_cos_psi * sin_psi**2 * sum_sin_psi\n",
     "        + 2 * cos_psi * sin_psi * sum_sin_psi**2\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    g1 = r1\n",
     "    g2 = r2 * (2 * r2 - 1)\n",
-    "    \n",
-    "    return omega + (k1 / r1) * pairwise + (k2 / g2)  * triplet"
+    "\n",
+    "    return omega + (k1 / r1) * pairwise + (k2 / g2) * triplet"
    ]
   },
   {
@@ -393,17 +394,17 @@
    "source": [
     "from itertools import permutations\n",
     "\n",
-    "def adjacency_tensor(H, order):\n",
     "\n",
+    "def adjacency_tensor(H, order):\n",
     "    N = H.num_nodes\n",
     "    shape = tuple([N] * (order + 1))\n",
     "    tensor = np.zeros(shape)\n",
-    "    \n",
+    "\n",
     "    edges = H.edges.filterby(\"order\", order)\n",
     "    for id, members in edges.members(dtype=dict).items():\n",
     "        for idcs in permutations(members):\n",
     "            tensor[idcs] = 1\n",
-    "            \n",
+    "\n",
     "    return tensor"
    ]
   },
@@ -415,18 +416,17 @@
    "outputs": [],
    "source": [
     "def rhs_23_nn_sym_micro(t, psi, omega, k1, k2, r1, r2, links, triangles):\n",
-    "    \n",
     "    N = len(psi)\n",
     "    pairwise = np.zeros(N)\n",
     "    triplet = np.zeros(N)\n",
-    "    \n",
+    "\n",
     "    for i, j in links:\n",
     "        # sin(oj - oi)\n",
     "        oi = psi[i]\n",
     "        oj = psi[j]\n",
     "        pairwise[i] += sin(oj - oi)\n",
     "        pairwise[j] += sin(oi - oj)\n",
-    "        \n",
+    "\n",
     "    for i, j, k in triangles:\n",
     "        # sin(2 oj - ok - oi)\n",
     "        oi = psi[i]\n",
@@ -633,7 +633,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xx = rhs_23_nn_sym_micro(0, psi_init, omega, k1, k2, r1=r1, r2=r2, links=links, triangles=triangles)\n",
+    "xx = rhs_23_nn_sym_micro(\n",
+    "    0, psi_init, omega, k1, k2, r1=r1, r2=r2, links=links, triangles=triangles\n",
+    ")\n",
     "yy = rhs_23_nn_sym(0, psi_init, omega, k1, k2, r1=r1, r2=r2, adj1=adj1, adj2=adj2)"
    ]
   },
@@ -746,7 +748,7 @@
     "\n",
     "# simulate\n",
     "kwargs = {\n",
-    "#    \"adj1\": adj1,\n",
+    "    #    \"adj1\": adj1,\n",
     "    \"links\": links,\n",
     "    \"triangles\": triangles,\n",
     "    \"k1_avg\": k1_avg,\n",
@@ -766,8 +768,8 @@
     "        theta_0=psi_init,\n",
     "        t_end=t_end,\n",
     "        dt=dt,\n",
-    "        rhs=rhs_pairwise_triplet_all_asym, # rhs_pairwise_all\n",
-    "        #**kwargs\n",
+    "        rhs=rhs_pairwise_triplet_all_asym,  # rhs_pairwise_all\n",
+    "        # **kwargs\n",
     "    )\n",
     "\n",
     "    thetas_arr[i] = thetas"
@@ -828,7 +830,11 @@
     "# only to viz twisted states\n",
     "fig, ax = plt.subplots(figsize=(2, 2))\n",
     "ax, ims = xgi.draw(\n",
-    "    H, pos=pos, node_fc=thetas_arr[i,:,-1] % (2 * np.pi), node_fc_cmap=\"twilight\", node_size=5\n",
+    "    H,\n",
+    "    pos=pos,\n",
+    "    node_fc=thetas_arr[i, :, -1] % (2 * np.pi),\n",
+    "    node_fc_cmap=\"twilight\",\n",
+    "    node_size=5,\n",
     ")\n",
     "plt.colorbar(ims[0], label=\"phase value\")"
    ]
@@ -1115,16 +1121,15 @@
     "kwargs = {\n",
     "    \"links\": links,\n",
     "    \"triangles\": triangles,\n",
-    "#    \"k1_avg\": k1_avg,\n",
-    "#    \"k2_avg\": k2_avg\n",
+    "    #    \"k1_avg\": k1_avg,\n",
+    "    #    \"k2_avg\": k2_avg\n",
     "    \"r1\": r1,\n",
     "    \"r2\": r2,\n",
     "}\n",
     "\n",
     "thetas_arr = np.zeros((n_reps, len(k2s), N, len(times)))\n",
     "\n",
-    "for j, k2 in enumerate (k2s):\n",
-    "    \n",
+    "for j, k2 in enumerate(k2s):\n",
     "    for i in tqdm(range(n_reps)):\n",
     "        psi_init = generate_state(N, kind=\"random\", noise=noise)\n",
     "\n",
@@ -1136,7 +1141,7 @@
     "            theta_0=psi_init,\n",
     "            t_end=t_end,\n",
     "            dt=dt,\n",
-    "            rhs=rhs_23_nn_sym, # rhs_pairwise_all  #rhs_triplet_all_asym\n",
+    "            rhs=rhs_23_nn_sym,  # rhs_pairwise_all  #rhs_triplet_all_asym\n",
     "            **kwargs\n",
     "        )\n",
     "\n",
@@ -1160,11 +1165,11 @@
    "source": [
     "results = {}\n",
     "\n",
-    "for j, k2 in enumerate(tqdm(k2s)): \n",
-    "    states = [identify_state(thetas, atol=0.5) for thetas in thetas_arr[:,j]]\n",
+    "for j, k2 in enumerate(tqdm(k2s)):\n",
+    "    states = [identify_state(thetas, atol=0.5) for thetas in thetas_arr[:, j]]\n",
     "    states_unique, counts = np.unique(states, return_counts=True)\n",
     "    probs = counts / n_reps\n",
-    "    \n",
+    "\n",
     "    results[k2] = {}\n",
     "    for state, prob in zip(states_unique, probs):\n",
     "        results[k2][state] = prob"
@@ -1539,8 +1544,8 @@
     "    ax=ax,\n",
     "    alpha=0.7,\n",
     "    style=\"state\",\n",
-    "    #hue_order=[\"sync\", \"2-cluster\", \"other\"]\n",
-    "    legend=True\n",
+    "    # hue_order=[\"sync\", \"2-cluster\", \"other\"]\n",
+    "    legend=True,\n",
     ")\n",
     "\n",
     "g.set(yscale=\"log\")\n",
@@ -1558,7 +1563,7 @@
     "\n",
     "fig_name = f\"basin_size_a2a_ic_{ic}_nreps_{n_reps}_rhs_pairwise_triplet_all_asym\"\n",
     "\n",
-    "#plt.savefig(f\"{results_dir}{fig_name}.png\", dpi=300, bbox_inches=\"tight\")"
+    "# plt.savefig(f\"{results_dir}{fig_name}.png\", dpi=300, bbox_inches=\"tight\")"
    ]
   },
   {
@@ -1614,14 +1619,14 @@
     "\n",
     "identify_state(thetas_arr[i, j])\n",
     "\n",
-    "#fig.suptitle(tag_params, fontsize=\"small\")\n",
+    "# fig.suptitle(tag_params, fontsize=\"small\")\n",
     "\n",
     "# only to viz twisted states\n",
-    "#fig, ax = plt.subplots(figsize=(3, 3))\n",
-    "#ax, ims = xgi.draw(\n",
+    "# fig, ax = plt.subplots(figsize=(3, 3))\n",
+    "# ax, ims = xgi.draw(\n",
     "#    H, pos=pos, node_fc=thetas_arr[i,j,-1] % (2 * np.pi), node_fc_cmap=\"twilight\", node_size=5\n",
-    "#)\n",
-    "#plt.colorbar(ims[0], label=\"phase value\")"
+    "# )\n",
+    "# plt.colorbar(ims[0], label=\"phase value\")"
    ]
   },
   {
@@ -1681,11 +1686,11 @@
     "results = {}\n",
     "k2s = [0, 0.5, 1, 1.5, 2, 2.5]\n",
     "\n",
-    "for j, k2 in enumerate(tqdm(k2s)): \n",
-    "    states = [identify_state(thetas, atol=0.5) for thetas in dat[:,j]]\n",
+    "for j, k2 in enumerate(tqdm(k2s)):\n",
+    "    states = [identify_state(thetas, atol=0.5) for thetas in dat[:, j]]\n",
     "    states_unique, counts = np.unique(states, return_counts=True)\n",
     "    probs = counts / n_reps\n",
-    "    \n",
+    "\n",
     "    results[k2] = {}\n",
     "    for state, prob in zip(states_unique, probs):\n",
     "        results[k2][state] = prob"
