--- a/notebooks/correctness_difference_between_rhs.ipynb
+++ b/notebooks/correctness_difference_between_rhs.ipynb
@@ -1013,7 +1013,7 @@
     "    \n",
     "    #print(len(triangles))\n",
     "    for senders, receiver in ditriangles:\n",
-    "        # sin(2 oj - ok - oi)\n",
+    "        # sin(oj + ok - 2 oi)\n",
     "        senders = list(senders)\n",
     "        receiver = list(receiver)\n",
     "        i = receiver\n",
