style: black, isort, ruff

--- a/notebooks/simulate-ring.ipynb
+++ b/notebooks/simulate-ring.ipynb
@@ -235,7 +235,7 @@
     "# dynamical\n",
     "k1 = 1  # pairwise coupling strength\n",
     "k2 = 1  # triplet coupling strength\n",
-    "omega = 0 #1 * np.ones(N)  # np.random.normal(size=N) #1 * np.ones(N)\n",
+    "omega = 0  # 1 * np.ones(N)  # np.random.normal(size=N) #1 * np.ones(N)\n",
     "\n",
     "ic = \"random\"  # initial condition type, see below\n",
     "noise = 1e-1  # noise strength\n",
@@ -257,7 +257,12 @@
     "# only to viz twisted states\n",
     "fig, ax = plt.subplots(figsize=(2, 2))\n",
     "ax, ims = xgi.draw(\n",
-    "    H, pos=pos, node_fc=psi_init % (2 * np.pi), node_fc_cmap=\"twilight\", node_size=5, node_lw=0.01\n",
+    "    H,\n",
+    "    pos=pos,\n",
+    "    node_fc=psi_init % (2 * np.pi),\n",
+    "    node_fc_cmap=\"twilight\",\n",
+    "    node_size=5,\n",
+    "    node_lw=0.01,\n",
     ")\n",
     "plt.colorbar(ims, label=\"phase value\")"
    ]
@@ -328,7 +333,9 @@
     "\n",
     "    return omega + (k1 / r1) * pairwise + (k2 / g2) * (triplet / 2)\n",
     "\n",
+    "\n",
     "from itertools import permutations\n",
+    "\n",
     "\n",
     "def adjacency_tensor(H, order):\n",
     "    N = H.num_nodes\n",
@@ -342,10 +349,11 @@
     "\n",
     "    return tensor\n",
     "\n",
+    "\n",
     "adjt2 = adjacency_tensor(H, 2)\n",
     "\n",
+    "\n",
     "def rhs_23_nn_sym(t, psi, omega, k1, k2, r1, r2, adj1, triangles, adjt2):\n",
-    "        \n",
     "    N = len(psi)\n",
     "    sin_psi = np.sin(psi)\n",
     "    cos_psi = np.cos(psi)\n",
@@ -353,10 +361,10 @@
     "    pairwise = adj1.dot(sin_psi) * cos_psi - adj1.dot(cos_psi) * sin_psi\n",
     "\n",
     "    triplet = np.zeros(N)\n",
-    "    \n",
-    "    #print(len(triangles))\n",
+    "\n",
+    "    # print(len(triangles))\n",
     "    for i, j, k in triangles:\n",
-    "        #print(i,j,k)\n",
+    "        # print(i,j,k)\n",
     "        # sin(2 oj - ok - oi)\n",
     "        oi = psi[i]\n",
     "        oj = psi[j]\n",
@@ -364,48 +372,53 @@
     "        triplet[i] += 2 * sin(oj + ok - 2 * oi)\n",
     "        triplet[j] += 2 * sin(oi + ok - 2 * oj)\n",
     "        triplet[k] += 2 * sin(oj + oi - 2 * ok)\n",
-    "    #sin_psi = np.sin(psi, dtype=np.longdouble)\n",
-    "    #cos_psi = np.cos(psi, dtype=np.longdouble)\n",
+    "    # sin_psi = np.sin(psi, dtype=np.longdouble)\n",
+    "    # cos_psi = np.cos(psi, dtype=np.longdouble)\n",
     "\n",
-    "    #sum_sin_psi = adjt2.dot(sin_psi)\n",
-    "    #sum_cos_psi = adjt2.dot(cos_psi)\n",
+    "    # sum_sin_psi = adjt2.dot(sin_psi)\n",
+    "    # sum_cos_psi = adjt2.dot(cos_psi)\n",
     "\n",
-    "    #triplet = (\n",
+    "    # triplet = (\n",
     "    #    -2 * sum_cos_psi.dot(cos_psi) * sin_psi * cos_psi\n",
     "    #    + 2 * sum_sin_psi.dot(sin_psi) * sin_psi * cos_psi\n",
     "    #    + sum_cos_psi.dot(sin_psi) * cos_psi**2\n",
     "    #    + sum_cos_psi.dot(sin_psi) * sin_psi**2\n",
     "    #    + sum_sin_psi.dot(cos_psi) * cos_psi**2\n",
     "    #    + sum_sin_psi.dot(cos_psi) * sin_psi**2\n",
-    "    #)\n",
-    "\n",
+    "    # )\n",
     "\n",
     "    g1 = r1\n",
     "    g2 = r2 * (2 * r2 - 1)\n",
     "\n",
-    "    return (k2 / g2) * triplet #omega + (k1 / g1) * pairwise #+ (k2 / g2) * triplet\n",
+    "    return (k2 / g2) * triplet  # omega + (k1 / g1) * pairwise #+ (k2 / g2) * triplet\n",
     "\n",
     "\n",
     "def rhs_yuan(t, theta, N, K1, K2, sigma):\n",
     "    dtheta_dt = np.zeros(N)\n",
     "\n",
     "    # pairwise coupling\n",
-    "    #for ii in range(N):\n",
+    "    # for ii in range(N):\n",
     "    #    for jj in range(-K1,K1+1):\n",
     "    #        dtheta_dt[ii] +=  np.sin(theta[(ii+jj)%N] - theta[ii])/K1\n",
-    "    #tris = []\n",
+    "    # tris = []\n",
     "    # triadic coupling\n",
-    "    idx = list(range(-K2,0)) + list(range(1,K2+1))\n",
+    "    idx = list(range(-K2, 0)) + list(range(1, K2 + 1))\n",
     "    for ii in range(N):\n",
     "        for jj in idx:\n",
     "            for kk in idx:\n",
     "                if jj != kk:\n",
-    "                    #tris.append([ii, (ii+jj)%N, (ii+kk)%N])\n",
-    "                    #print([ii, (ii+jj)%N, (ii+kk)%N])\n",
-    "                    dtheta_dt[ii] +=  sigma*sin(theta[(ii+kk)%N] + theta[(ii+jj)%N] - 2*theta[ii])/(K2*(2.0*K2-1))\n",
-    "    \n",
-    "    #print(len(tris))\n",
-    "    return dtheta_dt#, tris"
+    "                    # tris.append([ii, (ii+jj)%N, (ii+kk)%N])\n",
+    "                    # print([ii, (ii+jj)%N, (ii+kk)%N])\n",
+    "                    dtheta_dt[ii] += (\n",
+    "                        sigma\n",
+    "                        * sin(\n",
+    "                            theta[(ii + kk) % N] + theta[(ii + jj) % N] - 2 * theta[ii]\n",
+    "                        )\n",
+    "                        / (K2 * (2.0 * K2 - 1))\n",
+    "                    )\n",
+    "\n",
+    "    # print(len(tris))\n",
+    "    return dtheta_dt  # , tris"
    ]
   },
   {
@@ -450,7 +463,7 @@
    "source": [
     "K2 = 2\n",
     "idx = list(range(-K2, 0)) + list(range(1, K2 + 1))\n",
-    "sigma = 1 \n",
+    "sigma = 1\n",
     "\n",
     "ii = 0\n",
     "dtheta_dt = np.zeros(N)\n",
@@ -461,13 +474,15 @@
     "            # print([ii, (ii+jj)%N, (ii+kk)%N])\n",
     "            val = (\n",
     "                sigma\n",
-    "                * sin(psi_init[(ii + kk) % N] + psi_init[(ii + jj) % N] - 2 * psi_init[ii])\n",
+    "                * sin(\n",
+    "                    psi_init[(ii + kk) % N] + psi_init[(ii + jj) % N] - 2 * psi_init[ii]\n",
+    "                )\n",
     "                / (K2 * (2.0 * K2 - 1))\n",
     "            )\n",
     "            print(ii, (ii + jj) % N, (ii + kk) % N)\n",
     "            print(val)\n",
     "            dtheta_dt[ii] += val\n",
-    "            \n",
+    "\n",
     "print()\n",
     "print(dtheta_dt[ii])"
    ]
@@ -492,7 +507,7 @@
    "source": [
     "H.nodes.memberships(0)\n",
     "\n",
-    "#triangles"
+    "# triangles"
    ]
   },
   {
@@ -532,10 +547,10 @@
    ],
    "source": [
     "triplet = np.zeros(N)\n",
-    "    \n",
-    "#print(len(triangles))\n",
+    "\n",
+    "# print(len(triangles))\n",
     "for i, j, k in tri_i:\n",
-    "    #print(i,j,k)\n",
+    "    # print(i,j,k)\n",
     "    print(i, j, k)\n",
     "    # sin(2 oj - ok - oi)\n",
     "    oi = psi_init[i]\n",
@@ -544,7 +559,7 @@
     "    triplet[i] += 2 * sin(oj + ok - 2 * oi)\n",
     "    triplet[j] += 2 * sin(oi + ok - 2 * oj)\n",
     "    triplet[k] += 2 * sin(oj + oi - 2 * ok)\n",
-    "    \n",
+    "\n",
     "    print(sin(oj + ok - 2 * oi) * k2 / (r2 * (2 * r2 - 1)))"
    ]
   },
@@ -584,7 +599,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "psi_init = generate_state(N=83, kind=\"random\", k=2, ps=[0.3, 0.7], noise=0.1)\n"
+    "psi_init = generate_state(N=83, kind=\"random\", k=2, ps=[0.3, 0.7], noise=0.1)"
    ]
   },
   {
@@ -604,7 +619,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#x = odeint(rhs_yuan, psi_init, times, args=(N, r1, r2, k2))\n",
+    "# x = odeint(rhs_yuan, psi_init, times, args=(N, r1, r2, k2))\n",
     "solx = solve_ivp(rhs_yuan, [times[0], times[-1]], psi_init, args=(N, r1, r2, k2))"
    ]
   },
@@ -615,8 +630,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#y = odeint(rhs_23_nn_sym, psi_init, times, args=(omega, k1, k2, r1, r2, adj1, triangles, adjt2))\n",
-    "soly = solve_ivp(rhs_23_nn_sym, [times[0], times[-1]], psi_init, args=(omega, k1, k2, r1, r2, adj1, triangles, adjt2))"
+    "# y = odeint(rhs_23_nn_sym, psi_init, times, args=(omega, k1, k2, r1, r2, adj1, triangles, adjt2))\n",
+    "soly = solve_ivp(\n",
+    "    rhs_23_nn_sym,\n",
+    "    [times[0], times[-1]],\n",
+    "    psi_init,\n",
+    "    args=(omega, k1, k2, r1, r2, adj1, triangles, adjt2),\n",
+    ")"
    ]
   },
   {
@@ -731,10 +751,9 @@
     }
    ],
    "source": [
-    "plt.plot(solx.y[:,-1] % (2*np.pi), \"bo\")\n",
+    "plt.plot(solx.y[:, -1] % (2 * np.pi), \"bo\")\n",
     "\n",
-    "plt.plot(soly.y[:,-1] % (2*np.pi), \"ro\")\n",
-    "\n"
+    "plt.plot(soly.y[:, -1] % (2 * np.pi), \"ro\")"
    ]
   },
   {
@@ -817,7 +836,7 @@
     }
    ],
    "source": [
-    "yy = rhs_yuan(0,psi_init, N, r1, r2, k2)\n",
+    "yy = rhs_yuan(0, psi_init, N, r1, r2, k2)\n",
     "yy"
    ]
   },
@@ -922,10 +941,10 @@
     "# simulate\n",
     "kwargs = {\n",
     "    \"adj1\": adj1,\n",
-    "#    \"links\": links,\n",
+    "    #    \"links\": links,\n",
     "    \"triangles\": triangles,\n",
-    "#    \"k1_avg\": k1_avg,\n",
-    "#    \"k2_avg\": k2_avg,\n",
+    "    #    \"k1_avg\": k1_avg,\n",
+    "    #    \"k2_avg\": k2_avg,\n",
     "    \"r1\": r1,\n",
     "    \"r2\": r2,\n",
     "}\n",
@@ -944,7 +963,7 @@
     "        t_end=t_end,\n",
     "        dt=dt,\n",
     "        rhs=rhs_23_nn_sym,  # rhs_pairwise_all\n",
-    "        **kwargs\n",
+    "        **kwargs,\n",
     "    )\n",
     "\n",
     "    thetas_arr[i] = thetas"
@@ -1017,14 +1036,14 @@
     "    node_fc_cmap=\"twilight\",\n",
     "    node_size=5,\n",
     "    node_lw=0.1,\n",
-    "    vmin=0, \n",
-    "    vmax=6.28\n",
+    "    vmin=0,\n",
+    "    vmax=6.28,\n",
     ")\n",
     "plt.colorbar(ims, label=\"phase value\")\n",
     "\n",
     "print(identify_winding_number(thetas_arr[i], t=-1))\n",
-    "#print(winding_number(thetas_arr[i].T, N, -1, atol=0.5))\n",
-    "print(identify_state(thetas_arr[i], atol=0.001))\n"
+    "# print(winding_number(thetas_arr[i].T, N, -1, atol=0.5))\n",
+    "print(identify_state(thetas_arr[i], atol=0.001))"
    ]
   },
   {
@@ -1216,7 +1235,7 @@
     "ax1.set_ylabel(\"phases\")\n",
     "ax1.set_xlabel(\"node idx\")\n",
     "\n",
-    "#ax1.set_title(identify_state(thetas, atol=0.01))\n",
+    "# ax1.set_title(identify_state(thetas, atol=0.01))\n",
     "\n",
     "ax2, ims = xgi.draw(\n",
     "    H,\n",
@@ -1224,7 +1243,7 @@
     "    node_fc=phi[:, None] % (2 * np.pi),\n",
     "    node_fc_cmap=\"twilight\",\n",
     "    node_size=5,\n",
-    "    node_lw=0.1\n",
+    "    node_lw=0.1,\n",
     ")\n",
     "plt.colorbar(ims, label=\"phase value\")"
    ]
@@ -1358,7 +1377,7 @@
     "            t_end=t_end,\n",
     "            dt=dt,\n",
     "            rhs=rhs_23_nn_sym,  # rhs_pairwise_all  #rhs_triplet_all_asym\n",
-    "            **kwargs\n",
+    "            **kwargs,\n",
     "        )\n",
     "\n",
     "        thetas_arr[i, j] = thetas"
