--- a/notebooks/figure_3_basin_slices.ipynb
+++ b/notebooks/figure_3_basin_slices.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6e516cef",
+   "metadata": {},
+   "source": [
+    "# Figure 3: basin slices"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "211ce2f9",
@@ -8,20 +16,15 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "from itertools import combinations\n",
-    "from math import sin\n",
     "from pathlib import Path\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
     "import seaborn as sb\n",
     "from matplotlib.colors import ListedColormap\n",
-    "from tqdm import tqdm\n",
     "\n",
     "sys.path.append(\"../code/\")\n",
     "\n",
-    "import xgi\n",
     "from hypersync_draw import *\n",
     "from hypersync_generate import *\n",
     "from hypersync_identify import *\n",
@@ -30,7 +33,7 @@
     "sb.set_theme(\n",
     "    style=\"ticks\",\n",
     "    context=\"paper\",\n",
-    "    #rc={\"text.usetex\": True, \"font.family\": \"serif\", \"font.serif\": \"mathpazo\"},\n",
+    "    # rc={\"text.usetex\": True, \"font.family\": \"serif\", \"font.serif\": \"mathpazo\"},\n",
     ")\n",
     "\n",
     "results_dir = \"../results/\"\n",
@@ -39,14 +42,6 @@
     "Path(results_dir).mkdir(parents=True, exist_ok=True)\n",
     "Path(data_dir).mkdir(parents=True, exist_ok=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "312755c0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -66,19 +61,19 @@
     }
    ],
    "source": [
-    "\n",
     "sigmas = [0, 1, 2, 3]\n",
     "basins = [None] * len(sigmas)\n",
     "\n",
-    "fig, axs = plt.subplots(1, len(sigmas), sharex=True, sharey=True, figsize=(7.4, 2), layout=\"constrained\")\n",
+    "fig, axs = plt.subplots(\n",
+    "    1, len(sigmas), sharex=True, sharey=True, figsize=(7.4, 2), layout=\"constrained\"\n",
+    ")\n",
     "\n",
-    "#colors = sb.color_palette(\"coolwarm\", n_colors=26)[6:]\n",
+    "# colors = sb.color_palette(\"coolwarm\", n_colors=26)[6:]\n",
     "colors = sb.color_palette(\"tab20\")\n",
-    "colors[-1] = \"k\" \n",
+    "colors[-1] = \"k\"\n",
     "cmap = ListedColormap(colors)\n",
     "\n",
     "for i, sigma in enumerate(sigmas):\n",
-    "    \n",
     "    basins[i] = np.loadtxt(f\"../data/q=12_sigma={sigma}.txt\", delimiter=\",\")\n",
     "    flag = 0\n",
     "    if 99 in basins[i]:\n",
@@ -90,41 +85,46 @@
     "        basins[i],\n",
     "        cmap=cmap,\n",
     "        aspect=\"equal\",\n",
-    "        vmin=-6-0.5,\n",
-    "        vmax=13+0.5,\n",
-    "        #alpha=0.9,\n",
+    "        vmin=-6 - 0.5,\n",
+    "        vmax=13 + 0.5,\n",
+    "        # alpha=0.9,\n",
     "        origin=\"lower\",\n",
     "        interpolation=\"none\",\n",
     "        extent=[-np.pi, np.pi, -np.pi, np.pi],\n",
     "    )\n",
     "\n",
-    "    axs[i].set_xlabel(r'$\\alpha_1$')\n",
-    "    axs[i].set_xticks([-np.pi,0,np.pi])\n",
-    "    axs[i].set_yticks([-np.pi,0,np.pi])\n",
-    "    axs[i].set_xticklabels([r'$-\\pi$', '$0$', r'$\\pi$'])\n",
-    "    \n",
+    "    axs[i].set_xlabel(r\"$\\alpha_1$\")\n",
+    "    axs[i].set_xticks([-np.pi, 0, np.pi])\n",
+    "    axs[i].set_yticks([-np.pi, 0, np.pi])\n",
+    "    axs[i].set_xticklabels([r\"$-\\pi$\", \"$0$\", r\"$\\pi$\"])\n",
+    "\n",
     "    letter = [\"a\", \"b\", \"c\", \"d\"]\n",
-    "    \n",
-    "    axs[i].text(0.05, 1.05, f\"({letter[i]}) $\\sigma_{{\\Delta}} = {sigma}$\", transform=axs[i].transAxes)\n",
     "\n",
-    "#axs[0].text(0.95, 1.05, f\"a\", transform=axs[0].transAxes, weight=\"bold\", va=\"bottom\", ha=\"right\")\n",
-    "#axs[1].text(0.95, 1.05, f\"b\", transform=axs[1].transAxes, weight=\"bold\", va=\"bottom\", ha=\"right\")\n",
-    "#axs[2].text(0.95, 1.05, f\"c\", transform=axs[2].transAxes, weight=\"bold\", va=\"bottom\", ha=\"right\")\n",
-    "#axs[3].text(0.95, 1.05, f\"d\", transform=axs[3].transAxes, weight=\"bold\", va=\"bottom\", ha=\"right\")\n",
+    "    axs[i].text(\n",
+    "        0.05,\n",
+    "        1.05,\n",
+    "        f\"({letter[i]}) $\\sigma_{{\\Delta}} = {sigma}$\",\n",
+    "        transform=axs[i].transAxes,\n",
+    "    )\n",
     "\n",
-    "axs[0].set_yticklabels([r'$-\\pi$', '$0$', r'$\\pi$'])\n",
-    "    \n",
-    "axs[0].set_ylabel(r'$\\alpha_2$')\n",
+    "# axs[0].text(0.95, 1.05, f\"a\", transform=axs[0].transAxes, weight=\"bold\", va=\"bottom\", ha=\"right\")\n",
+    "# axs[1].text(0.95, 1.05, f\"b\", transform=axs[1].transAxes, weight=\"bold\", va=\"bottom\", ha=\"right\")\n",
+    "# axs[2].text(0.95, 1.05, f\"c\", transform=axs[2].transAxes, weight=\"bold\", va=\"bottom\", ha=\"right\")\n",
+    "# axs[3].text(0.95, 1.05, f\"d\", transform=axs[3].transAxes, weight=\"bold\", va=\"bottom\", ha=\"right\")\n",
+    "\n",
+    "axs[0].set_yticklabels([r\"$-\\pi$\", \"$0$\", r\"$\\pi$\"])\n",
+    "\n",
+    "axs[0].set_ylabel(r\"$\\alpha_2$\")\n",
     "\n",
     "ticks = list(range(-6, 13, 2)) + [13]\n",
     "cbar = fig.colorbar(im, ax=axs, ticks=ticks, shrink=1.2, label=\"$q$, winding number\")\n",
     "\n",
     "for ax in axs:\n",
-    "    ax.tick_params('both', width=0.8, length=4, which='major')\n",
+    "    ax.tick_params(\"both\", width=0.8, length=4, which=\"major\")\n",
     "\n",
-    "cbar.ax.tick_params('both', width=0.8, length=3, which='major')\n",
+    "cbar.ax.tick_params(\"both\", width=0.8, length=3, which=\"major\")\n",
     "\n",
-    "custom_tick_labels = [str(i) if i != 13 else 'n.t.' for i in ticks]\n",
+    "custom_tick_labels = [str(i) if i != 13 else \"n.t.\" for i in ticks]\n",
     "cbar.set_ticklabels(custom_tick_labels)\n",
     "\n",
     "\n",
@@ -132,7 +132,9 @@
     "cbar.outline.set_visible(False)\n",
     "cbar.ax.tick_params(labelsize=\"x-small\")\n",
     "\n",
-    "plt.savefig(f\"{results_dir}figure_3.pdf\", dpi=250)#, bbox_inches=\"tight\", pad_inches=0)\n"
+    "plt.savefig(\n",
+    "    f\"{results_dir}figure_3.pdf\", dpi=250\n",
+    ")  # , bbox_inches=\"tight\", pad_inches=0)"
    ]
   },
   {
@@ -142,49 +144,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "9158a670",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<svg  width=\"1100\" height=\"55\"><rect x=\"0\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#2f74a4;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"55\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#b4c8e2;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"110\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#e68127;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"165\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#f1bb86;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"220\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#389438;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"275\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#9ed693;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"330\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#c4393a;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"385\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#f4a3a1;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"440\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#9470b4;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"495\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#c4b4d1;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"550\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#855b52;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"605\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#bf9f99;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"660\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#d882be;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"715\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#f0bdd3;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"770\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#7f7f7f;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"825\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#c7c7c7;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"880\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#acad32;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"935\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#d3d395;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"990\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#2aaebc;stroke-width:2;stroke:rgb(255,255,255)\"/><rect x=\"1045\" y=\"0\" width=\"55\" height=\"55\" style=\"fill:#a5d5de;stroke-width:2;stroke:rgb(255,255,255)\"/></svg>"
-      ],
-      "text/plain": [
-       "[(0.18292156862745101, 0.455549019607843, 0.6445294117647059),\n",
-       " (0.7062352941176471, 0.783686274509804, 0.8859215686274511),\n",
-       " (0.9007647058823529, 0.5042156862745097, 0.15413725490196084),\n",
-       " (0.9444117647058824, 0.7337450980392157, 0.5261764705882354),\n",
-       " (0.22031372549019612, 0.5796862745098039, 0.22031372549019612),\n",
-       " (0.619549019607843, 0.8395098039215686, 0.5761764705882352),\n",
-       " (0.7671568627450981, 0.22499999999999998, 0.22809803921568617),\n",
-       " (0.956764705882353, 0.6376666666666667, 0.6314705882352942),\n",
-       " (0.5787450980392155, 0.43933333333333335, 0.7057647058823528),\n",
-       " (0.7704901960784313, 0.7054313725490196, 0.8200588235294117),\n",
-       " (0.5222549019607844, 0.3549607843137256, 0.3208823529411765),\n",
-       " (0.7488627450980393, 0.6249411764705882, 0.600156862745098),\n",
-       " (0.8457254901960785, 0.5111372549019608, 0.743490196078431),\n",
-       " (0.9418627450980391, 0.7404901960784315, 0.8272352941176468),\n",
-       " (0.4980392156862745, 0.4980392156862745, 0.4980392156862745),\n",
-       " (0.7803921568627451, 0.7803921568627451, 0.7803921568627451),\n",
-       " (0.6742549019607844, 0.6773529411764706, 0.19715686274509803),\n",
-       " (0.826705882352941, 0.826705882352941, 0.5850588235294119),\n",
-       " (0.1659607843137254, 0.6833333333333332, 0.7360000000000001),\n",
-       " (0.648843137254902, 0.8347254901960783, 0.8688039215686274)]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sb.color_palette(\"tab20\", desat=0.79)"
-   ]
   }
  ],
  "metadata": {
