--- a/notebooks/figure_3_basin_slices.ipynb
+++ b/notebooks/figure_3_basin_slices.ipynb
@@ -107,10 +107,6 @@
     "        transform=axs[i].transAxes,\n",
     "    )\n",
     "\n",
-    "# axs[0].text(0.95, 1.05, f\"a\", transform=axs[0].transAxes, weight=\"bold\", va=\"bottom\", ha=\"right\")\n",
-    "# axs[1].text(0.95, 1.05, f\"b\", transform=axs[1].transAxes, weight=\"bold\", va=\"bottom\", ha=\"right\")\n",
-    "# axs[2].text(0.95, 1.05, f\"c\", transform=axs[2].transAxes, weight=\"bold\", va=\"bottom\", ha=\"right\")\n",
-    "# axs[3].text(0.95, 1.05, f\"d\", transform=axs[3].transAxes, weight=\"bold\", va=\"bottom\", ha=\"right\")\n",
     "\n",
     "axs[0].set_yticklabels([r\"$-\\pi$\", \"$0$\", r\"$\\pi$\"])\n",
     "\n",
@@ -132,9 +128,7 @@
     "cbar.outline.set_visible(False)\n",
     "cbar.ax.tick_params(labelsize=\"x-small\")\n",
     "\n",
-    "plt.savefig(\n",
-    "    f\"{results_dir}figure_3.pdf\", dpi=250\n",
-    ")  # , bbox_inches=\"tight\", pad_inches=0)"
+    "#plt.savefig(f\"{results_dir}figure_3.pdf\", dpi=250, bbox_inches=\"tight\", pad_inches=0)"
    ]
   },
   {
