--- a/notebooks/figure_4_Porder.ipynb
+++ b/notebooks/figure_4_Porder.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "0cc3eae4",
    "metadata": {},
    "outputs": [
@@ -268,6 +268,7 @@
     "\n",
     "# fig_name = f\"local_order_ring_{suf}_N_{N}_nreps_{nreps}\"\n",
     "# plt.savefig(f\"{run_dir}{fig_name}.png\", dpi=250, bbox_inches=\"tight\")\n",
+    "plt.savefig(f\"{results_dir}figure_4.png\", dpi=250, bbox_inches=\"tight\")\n",
     "\n",
     "plt.show()"
    ]
