--- a/notebooks/figure_1_linear_stability.ipynb
+++ b/notebooks/figure_1_linear_stability.ipynb
@@ -573,6 +573,22 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44251267",
+   "metadata": {},
+   "source": [
+    "## Haromnics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "289d8f4c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
